--- a/about.html
+++ b/about.html
@@ -4,20 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
-    <!-- <link rel="stylesheet" type="text/css" href="./src/css/main.css">
-	<meta charset="utf-8">
-	<meta name="keywords" content="historia interactiva, interactive story, videojuego de aventura, adventure game"> -->
-    <!--(Esto son keywords para el SEO)-->
-	<!-- <meta name="description" content="Para personas que busquen una experiencia tranquila, que les gusten las historias fantasticas."> -->
-	<!--(Esta es la descripcion de la pagina)-->
-    <!-- <meta name="author" content="Rey Valentín Arias Pérez, Daniel Alejandro Arango Echeverri, Adrián Saldarriaga Marín, Nicolás Vélez Ramírez">
-	<meta name="robots" content="index">
-	<link rel="icon" href="./src/img/logo-icon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pridi&display=swap" rel="stylesheet"> -->
     <link rel="icon" href="./src/img/logo-icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
@@ -45,6 +31,7 @@
         }
 
         #backAU{
+            
             padding-top: 40px;
             right: 0;
         }
@@ -68,6 +55,7 @@
         }
 
         #photo{
+            margin-top: 40%;
             text-align: center;
         }
 
@@ -91,7 +79,7 @@
         #paragraphs{
             background-color: white;
             border: 1px;
-            border-radius: 20px;
+            border-radius: 10px;
             margin: 8px;
         }
 
@@ -128,10 +116,10 @@
                     <h3 class="subtitle">Rey Valentín Arias Pérez</h3>
                 </div>
                 <div id="paragraphs">
-                    <p class="pagraphs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus veniam repellat rerum voluptatem rem distinctio porro.</p>
+                    <p class="pagraphs">Estudiante de Ingeniería en diseño de entretenimiento digital, cursando actualmente el sexto semestre.</p>
                 </div>
                 <div id="contactRey">
-                    <a class="contact" target="_blank" href="https://www.instagram.com/adrisaldam">Contactar</a>
+                    <a class="contact" target="_blank" href="https://github.com/LilWiPiN">Contactar</a>
                 </div>
             </div>
 
@@ -139,11 +127,11 @@
                 <div id="photo">
                     <img src="./src/img/place-holder-icon.png" class="photos" alt="Daniel Alejandro Arango Echeverri photo">
                 </div>
-                <div id="nameDaniel">
+                <div id="nameJustified">
                     <h3 class="subtitle">Daniel Alejandro Arango Echeverri</h3>
                 </div>
                 <div id="paragraphs">
-                    <p class="pagraphs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus veniam repellat rerum voluptatem rem distinctio porro.</p>
+                    <p class="pagraphs">Estudiante de Ingeniería en diseño de entretenimiento digital, cursando actualmente el sexto semestre.</p>
                 </div>
                 <div id="contactDaniel">
                     <a class="contact" target="_blank" href="https://www.instagram.com/adrisaldam">Contactar</a>
@@ -158,7 +146,7 @@
                     <h3 class="subtitle">Adrián Saldarriaga Marín</h3>
                 </div>
                 <div id="paragraphs">
-                    <p class="pagraphs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus veniam repellat rerum voluptatem rem distinctio porro.</p>
+                    <p class="pagraphs">Estudiante de Ingeniería en diseño de entretenimiento digital, cursando actualmente el noveno semestre.</p>
                 </div>
                 <div id="contactAdrian">
                     <a class="contact" target="_blank" href="https://www.instagram.com/adrisaldam">Contactar</a>
@@ -173,10 +161,10 @@
                     <h3 class="subtitle">Nicolás Vélez Ramírez</h3>
                 </div>
                 <div id="paragraphs">
-                    <p class="pagraphs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus veniam repellat rerum voluptatem rem distinctio porro.</p>
+                    <p class="pagraphs">Estudiante de Ingeniería en diseño de entretenimiento digital, cursando actualmente el cuarto semestre.</p>
                 </div>
                 <div id="contactNicolas">
-                    <a class="contact" target="_blank" href="https://www.instagram.com/adrisaldam">Contactar</a>
+                    <a class="contact" target="_blank" href="https://www.youtube.com/@NicolasVelezRamirez">Contactar</a>
                 </div>
             </div>
         </div>
