--- a/escenas/FBI2.html
+++ b/escenas/FBI2.html
@@ -8,9 +8,10 @@
     <style>
       body {
         background-image: url('../src/img/ComisariaChat2.png');
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
+        background-position: center;
       }
     
       .skip_hint_section img{
