--- a/escenas/Princ_Derecha_cuadro.html
+++ b/escenas/Princ_Derecha_cuadro.html
@@ -70,10 +70,24 @@
           font-size: 34px;
       }
 
-      @media only screen and (max-height: 376px){
+      @media only screen and (max-height: 1200px){
+        .element_key img{
+          left: 550px;
+          top: 720px;
+        }
+      }
+
+      @media only screen and (max-height: 770px){
+        .element_key img{
+          left: 270px;
+          top: 500px;
+        }
+      }
+
+      @media only screen and (max-height: 412px){
         .element_key img{
           left: 239px;
-          top: 210px;
+          top: 300px;
         }
       }
         
