--- a/escenas/Princ_Izquierda_cuadro.html
+++ b/escenas/Princ_Izquierda_cuadro.html
@@ -64,10 +64,24 @@
           font-size: 34px;
       }
 
-      @media only screen and (max-height: 376px){
+      @media only screen and (max-height: 1200px){
         .element_key img{
-          left: 279px;
-          top: 210px;
+          left: 1300px;
+          top: 680px;
+        }
+      }
+
+      @media only screen and (max-height: 770px){
+        .element_key img{
+          left: 680px;
+          top: 490px;
+        }
+      }
+
+      @media only screen and (max-height: 412px){
+        .element_key img{
+          left: 600px;
+          top: 300px;
         }
       }
     </style>
