--- a/escenas/Mansion_Principal_Der_Der_cuadro.html
+++ b/escenas/Mansion_Principal_Der_Der_cuadro.html
@@ -8,7 +8,7 @@
     <style>
       body {
         background-image: url('../src/img/MansionCuadro1.jpg');
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: center;
