--- a/escenas/Mansion_Principal_Derecha.html
+++ b/escenas/Mansion_Principal_Derecha.html
@@ -8,7 +8,7 @@
     <style>
       body {
         background-image: url('../src/img/Mansion3.jpg');
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: center;
