--- a/escenas/Oficina_1.html
+++ b/escenas/Oficina_1.html
@@ -8,9 +8,10 @@
     <style>
       body {
         background-image: url('../src/img/Oficina1.jpg');
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
+        background-position: center;
       }
     
       .button-container {
