--- a/escenas/Oficina_2.html
+++ b/escenas/Oficina_2.html
@@ -27,14 +27,6 @@
         border: none;
       }
 
-      .element_key img{
-        width: 50px;
-        transform: rotate(-82deg);
-        position: fixed;
-        right: 382px;
-        top: 155px;
-      }
-
       #popup {
           display: none;
           background-color: rgb(138, 135, 135);
@@ -67,6 +59,36 @@
           top: 10px;
           right: 10px;
           font-size: 34px;
+      }
+
+      @media only screen and (max-height: 1200px){
+          .element_key img{
+          width: 100px;
+          transform: rotate(-82deg);
+          position: fixed;
+          right: 800px;
+          top: 360px;
+        }
+      }
+
+      @media only screen and (max-height: 770px){
+          .element_key img{
+          width: 80px;
+          transform: rotate(-82deg);
+          position: fixed;
+          right: 400px;
+          top: 315px;
+        }
+      }
+
+      @media only screen and (max-height: 412px){
+          .element_key img{
+          width: 50px;
+          transform: rotate(-82deg);
+          position: fixed;
+          right: 382px;
+          top: 155px;
+        }
       }
     </style>
 </head>
