--- a/escenas/TheEnd.html
+++ b/escenas/TheEnd.html
@@ -8,9 +8,10 @@
     <style>
       body {
         background-image: url('../src/img/tobecontinued.png');
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
+        background-position: center;
       }
       
       div{
