Cambio en un texto

--- a/about.html
+++ b/about.html
@@ -131,10 +131,10 @@
                     <h3 class="subtitle">Daniel Alejandro Arango Echeverri</h3>
                 </div>
                 <div id="paragraphs">
-                    <p class="pagraphs">Estudiante de Ingeniería en diseño de entretenimiento digital, cursando actualmente el sexto semestre.</p>
+                    <p class="pagraphs">Estudiante de Ingeniería en diseño de entretenimiento digital, cursando actualmente el séptimo semestre.</p>
                 </div>
                 <div id="contactDaniel">
-                    <a class="contact" target="_blank" href="https://www.instagram.com/adrisaldam">Contactar</a>
+                    <a class="contact" target="_blank" href="https://www.instagram.com/danielarangoee">Contactar</a>
                 </div>
             </div>
 
